--- a/addons/mail/i18n/vi.po
+++ b/addons/mail/i18n/vi.po
@@ -5147,7 +5147,7 @@ msgstr "Mở hồ sơ"
 #. module: mail
 #: model:ir.model.fields.selection,name:mail.selection__mail_mail__failure_type__mail_optout
 msgid "Opted Out"
-msgstr "Hủy tham gia"
+msgstr "Hủy đăng ký nhận mail"
 
 #. module: mail
 #: model:ir.model.fields,help:mail.field_mail_alias__alias_force_thread_id
