--- a/addons/mass_mailing/i18n/vi.po
+++ b/addons/mass_mailing/i18n/vi.po
@@ -428,7 +428,7 @@ msgstr "<span class=\"o_stat_text\">Trả lại</span>"
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.mailing_list_view_form
 msgid "<span class=\"o_stat_text\">Opt-out</span>"
-msgstr "<span class=\"o_stat_text\">Hủy tham gia</span>"
+msgstr "<span class=\"o_stat_text\">Hủy đăng ký nhận mail</span>"
 
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.mailing_list_view_form
@@ -477,7 +477,7 @@ msgstr "<span class=\"text-muted\">Gửi thư</span>"
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.mailing_list_view_kanban
 msgid "<span class=\"text-muted\">Opt-out</span>"
-msgstr "<span class=\"text-muted\">Hủy tham gia</span>"
+msgstr "<span class=\"text-muted\">Hủy đăng ký nhận mail</span>"
 
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.view_mail_mass_mailing_form
@@ -3064,7 +3064,7 @@ msgstr ""
 #. module: mass_mailing
 #: model:ir.model.fields.selection,name:mass_mailing.selection__mailing_trace__failure_type__mail_optout
 msgid "Opted Out"
-msgstr "Hủy tham gia"
+msgstr "Hủy đăng ký nhận mail"
 
 #. module: mass_mailing
 #: model_terms:ir.ui.view,arch_db:mass_mailing.mailing_contact_view_search
