--- a/addons/mass_mailing_sms/i18n/vi.po
+++ b/addons/mass_mailing_sms/i18n/vi.po
@@ -606,7 +606,7 @@ msgstr "Mở Người nhận"
 #. module: mass_mailing_sms
 #: model:ir.model.fields.selection,name:mass_mailing_sms.selection__mailing_trace__failure_type__sms_optout
 msgid "Opted Out"
-msgstr "Hủy tham gia"
+msgstr "Hủy đăng ký nhận tin"
 
 #. module: mass_mailing_sms
 #: model:ir.model,name:mass_mailing_sms.model_sms_sms
