--- a/addons/sms/i18n/vi.po
+++ b/addons/sms/i18n/vi.po
@@ -770,7 +770,7 @@ msgstr "Số tin chưa đọc"
 #. module: sms
 #: model:ir.model.fields.selection,name:sms.selection__sms_sms__failure_type__sms_optout
 msgid "Opted Out"
-msgstr "Hủy tham gia"
+msgstr "Hủy đăng ký nhận tin"
 
 #. module: sms
 #: model:ir.model.fields,help:sms.field_sms_template__lang
