[I18N][15.0] account: Edit translation for "account"

--- a/addons/account/i18n/vi.po
+++ b/addons/account/i18n/vi.po
@@ -10222,7 +10222,7 @@ msgstr "Điều khoản thanh toán: Ngày cuối tháng kế tiếp"
 #. module: account
 #: model_terms:account.payment.term,note:account.account_payment_term_immediate
 msgid "Payment terms: Immediate Payment"
-msgstr "Điều Khoản thanh toán: Thanh toán ngay"
+msgstr "Điều Khoản thanh toán: Thanh toán ngay (trả trước 100%)"
 
 #. module: account
 #: code:addons/account/wizard/account_payment_register.py:0
