Translate  hr_*, base, account

--- a/addons/hr_org_chart/i18n/vi.po
+++ b/addons/hr_org_chart/i18n/vi.po
@@ -61,7 +61,7 @@ msgstr ""
 #: model:ir.model.fields,field_description:hr_org_chart.field_hr_employee_base__child_all_count
 #: model:ir.model.fields,field_description:hr_org_chart.field_hr_employee_public__child_all_count
 msgid "Indirect Subordinates Count"
-msgstr "Indirect Subordinates Count"
+msgstr "SL Cấp dưới gián tiếp"
 
 #. module: hr_org_chart
 #. openerp-web
@@ -116,7 +116,7 @@ msgstr "Xem tất cả"
 #: model:ir.model.fields,field_description:hr_org_chart.field_hr_employee__subordinate_ids
 #: model:ir.model.fields,field_description:hr_org_chart.field_hr_employee_public__subordinate_ids
 msgid "Subordinates"
-msgstr "Cấp dưới"
+msgstr "Nhân viên cấp dưới"
 
 #. module: hr_org_chart
 #. openerp-web
@@ -130,7 +130,7 @@ msgstr "Đội"
 #: code:addons/hr_org_chart/static/src/xml/hr_org_chart.xml:0
 #, python-format
 msgid "This employee has no manager or subordinate."
-msgstr "Nhân viên này không có quản lý hoặc cấp dưới."
+msgstr "Nhân viên này không có quản lý cấp trên hay nhân viên cấp dưới."
 
 #. module: hr_org_chart
 #. openerp-web
