--- a/addons/hr_timesheet/i18n/vi.po
+++ b/addons/hr_timesheet/i18n/vi.po
@@ -211,7 +211,7 @@ msgstr "Tất cả"
 #: model:ir.actions.act_window,name:hr_timesheet.timesheet_action_all
 #: model:ir.ui.menu,name:hr_timesheet.timesheet_menu_activity_all
 msgid "All Timesheets"
-msgstr "Tất cả Bảng chấm công"
+msgstr "Tất cả bảng chấm công"
 
 #. module: hr_timesheet
 #: model:ir.model.fields,field_description:hr_timesheet.field_project_task__allow_timesheets
