Update translate hr_holidays

--- a/addons/hr_holidays/i18n/vi.po
+++ b/addons/hr_holidays/i18n/vi.po
@@ -751,7 +751,7 @@ msgstr "Cấp phát luỹ kế"
 #. module: hr_holidays
 #: model_terms:ir.ui.view,arch_db:hr_holidays.hr_accrual_level_view_form
 msgid "Accrual Level"
-msgstr "Mức lũy kế"
+msgstr "Cấp độ lũy kế"
 
 #. module: hr_holidays
 #: model:ir.model,name:hr_holidays.model_hr_leave_accrual_plan
@@ -764,7 +764,7 @@ msgstr "Kế hoạch lũy kế"
 #. module: hr_holidays
 #: model:ir.model,name:hr_holidays.model_hr_leave_accrual_level
 msgid "Accrual Plan Level"
-msgstr "Mức kế hoạch lũy kế"
+msgstr "Cấp độ kế hoạch lũy kế"
 
 #. module: hr_holidays
 #: code:addons/hr_holidays/models/hr_leave_accrual_plan.py:0
@@ -894,7 +894,7 @@ msgstr "Quản trị viên"
 #. module: hr_holidays
 #: model:ir.model.fields.selection,name:hr_holidays.selection__hr_leave_accrual_plan__transition_mode__end_of_accrual
 msgid "After this accrual's period"
-msgstr "Sau khoảng thời gian tích lũy này"
+msgstr "Sau khoảng thời gian lũy kế này"
 
 #. module: hr_holidays
 #: model:ir.model.fields.selection,name:hr_holidays.selection__hr_leave__request_date_from_period__pm
@@ -1166,12 +1166,12 @@ msgstr "Nghỉ đã lưu trữ"
 #. module: hr_holidays
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_leave_accrual_level__action_with_unused_accruals
 msgid "At the end of the calendar year, unused accruals will be"
-msgstr "Vào cuối năm dương lịch, các khoản tích lũy chưa sử dụng sẽ"
+msgstr "Vào cuối năm dương lịch, các khoản lũy kế chưa sử dụng sẽ"
 
 #. module: hr_holidays
 #: model_terms:ir.ui.view,arch_db:hr_holidays.hr_accrual_plan_view_form
 msgid "At the end of the year, unused accruals will be"
-msgstr "Vào cuối năm, các khoản tích lũy chưa sử dụng sẽ"
+msgstr "Vào cuối năm, các khoản lũy kế chưa sử dụng sẽ"
 
 #. module: hr_holidays
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_leave__supported_attachment_ids
@@ -2002,7 +2002,7 @@ msgid ""
 "will get via the accrual' system."
 msgstr ""
 "Nếu cấp phát lũy kế: Số ngày được cấp phát ngoài những ngày bạn sẽ nhận được "
-"thông qua hệ thống tích lũy."
+"thông qua hệ thống lũy kế."
 
 #. module: hr_holidays
 #: model:ir.model.fields,help:hr_holidays.field_hr_leave_allocation__number_of_hours_display
@@ -2011,7 +2011,7 @@ msgid ""
 " will get via the accrual' system."
 msgstr ""
 "Nếu cấp phát lũy kế: Số ngày được cấp phát ngoài những ngày bạn sẽ nhận được "
-"thông qua hệ thống tích lũy."
+"thông qua hệ thống lũy kế."
 
 #. module: hr_holidays
 #: model:ir.model.fields,help:hr_holidays.field_hr_leave__message_needaction
@@ -2071,7 +2071,7 @@ msgid ""
 "                After this accrual's period: When the accrual is complete (a week, a month), and granted, you switch to next level if allocation date corresponds"
 msgstr ""
 "Ngay lập tức: Khi ngày tương ứng với cấp độ mới, khoản lũy kế của bạn sẽ tự động được tính, được cấp và bạn chuyển sang cấp độ mới \n"
-"Sau khoảng thời gian lũy kế này: Khi khoản tích lũy hoàn tất (một tuần, một tháng) và được cấp, bạn chuyển sang cấp độ tiếp theo của ngày cấp phát tương ứng"
+"Sau khoảng thời gian lũy kế này: Khi khoản lũy kế hoàn tất (một tuần, một tháng) và được cấp, bạn chuyển sang cấp độ tiếp theo của ngày cấp phát tương ứng"
 
 #. module: hr_holidays
 #: model_terms:ir.ui.view,arch_db:hr_holidays.hr_leave_view_form
@@ -3752,7 +3752,7 @@ msgstr "Hoạt động hôm nay"
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_employee_base__allocations_count
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_employee_public__allocations_count
 msgid "Total number of allocations"
-msgstr ""
+msgstr "Tổng số lần cấp phát"
 
 #. module: hr_holidays
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_employee__allocation_count
@@ -3930,7 +3930,7 @@ msgstr "Nghỉ Còn Lại Biểu Kiến"
 #. module: hr_holidays
 #: model:ir.model.fields,field_description:hr_holidays.field_hr_leave_type__virtual_leaves_taken
 msgid "Virtual Time Off Already Taken"
-msgstr "Virtual Time Off Already Taken"
+msgstr "Xin nghỉ ảo đã sử dụng"
 
 #. module: hr_holidays
 #: model:ir.model.fields.selection,name:hr_holidays.selection__hr_employee__current_leave_state__confirm
