[FIX][15.0]sale: fix translation

--- a/addons/sale/i18n/vi.po
+++ b/addons/sale/i18n/vi.po
@@ -1544,7 +1544,7 @@ msgstr "Sản phẩm mặc định để ghi nhận các khoản ứng trước"
 #. module: sale
 #: model_terms:ir.ui.view,arch_db:sale.res_config_settings_view_form
 msgid "Deliver Content by Email"
-msgstr "Chuyển phát Nội dung bằng Email"
+msgstr "Gửi thông tin chi tiết qua Email"
 
 #. module: sale
 #: model_terms:ir.ui.view,arch_db:sale.view_order_form
@@ -3711,7 +3711,7 @@ msgstr "Gửi hoá đơn CHIẾU LỆ"
 #. module: sale
 #: model_terms:ir.ui.view,arch_db:sale.res_config_settings_view_form
 msgid "Send a product-specific email once the invoice is validated"
-msgstr "Gửi email cụ thể cho sản phẩm sau khi hoá đơn được xác thực"
+msgstr "Gửi email với thông tin chi tiết của sản phẩm ngay khi hóa đơn được phê duyệt"
 
 #. module: sale
 #: model_terms:ir.ui.view,arch_db:sale.sale_onboarding_sample_quotation_step
