--- a/addons/portal_rating/i18n/portal_rating.pot
+++ b/addons/portal_rating/i18n/portal_rating.pot
@@ -166,6 +166,12 @@ msgstr ""
 
 #. module: portal_rating
 #. odoo-javascript
+#: code:addons/portal_rating/static/src/xml/portal_tools.xml:0
+msgid "Progress bar"
+msgstr ""
+
+#. module: portal_rating
+#. odoo-javascript
 #: code:addons/portal_rating/static/src/xml/portal_chatter.xml:0
 msgid "Published on"
 msgstr ""
