[IMP] website, *: add aria-label on social media anchors
*: website_hr_recruitment

In order to improve the accessibility of the website pages, an
`aria-label` attribute has been added on some social media anchors to
avoid a warning of type `Links do not have a discernible name`. The
`options.js` file has also been adapted in order to correctly set the
`aria-label` attribute of added social media anchors.

X-original-commit: 8eb5d38b7e34999e5b1c11f4a664049cb8861d51
Co-authored-by: qsm-odoo <qsm@odoo.com>

--- a/addons/website_hr_recruitment/i18n/website_hr_recruitment.pot
+++ b/addons/website_hr_recruitment/i18n/website_hr_recruitment.pot
@@ -361,6 +361,11 @@ msgstr ""
 
 #. module: website_hr_recruitment
 #: model_terms:ir.ui.view,arch_db:website_hr_recruitment.job_right_side_bar
+msgid "Facebook"
+msgstr ""
+
+#. module: website_hr_recruitment
+#: model_terms:ir.ui.view,arch_db:website_hr_recruitment.job_right_side_bar
 msgid "Follow us"
 msgstr ""
 
@@ -465,6 +470,11 @@ msgstr ""
 #. module: website_hr_recruitment
 #: model_terms:ir.ui.view,arch_db:website_hr_recruitment.default_website_description
 msgid "Lead the entire sales cycle"
+msgstr ""
+
+#. module: website_hr_recruitment
+#: model_terms:ir.ui.view,arch_db:website_hr_recruitment.job_right_side_bar
+msgid "LinkedIn"
 msgstr ""
 
 #. module: website_hr_recruitment
@@ -710,6 +720,11 @@ msgstr ""
 #. module: website_hr_recruitment
 #: model_terms:ir.ui.view,arch_db:website_hr_recruitment.default_website_description
 msgid "Trainings"
+msgstr ""
+
+#. module: website_hr_recruitment
+#: model_terms:ir.ui.view,arch_db:website_hr_recruitment.job_right_side_bar
+msgid "Twitter"
 msgstr ""
 
 #. module: website_hr_recruitment
