[FIX] {purchase_,}stock: prevent negative cost
The user should not be able to set a negative cost. Else, it will lead
to unexpected behaviors and inconsistencies in stock valuations.

The commit adds an onchange because adding a constraint in stable
would be too risky.

OPW-3619709

--- a/addons/purchase_stock/i18n/purchase_stock.pot
+++ b/addons/purchase_stock/i18n/purchase_stock.pot
@@ -679,6 +679,12 @@ msgstr ""
 
 #. module: purchase_stock
 #. odoo-python
+#: code:addons/purchase_stock/models/purchase_order_line.py:0
+msgid "The unit price of a storable product should not be negative."
+msgstr ""
+
+#. module: purchase_stock
+#. odoo-python
 #: code:addons/purchase_stock/models/stock_rule.py:0
 msgid ""
 "There is no matching vendor price to generate the purchase order for product"
