[FIX] website_event: address misleading editor options
This commit enhances the user experience by rewording editor options to
ensure predictability. Specifically:

- The use of the `o_we_sublevel_1` class was misleading as these options
  are not tied to the main layout type.

- The term "Templates" was ambiguous, as the option actually renders
  category badges.

task-3698364

--- a/addons/website_event/i18n/website_event.pot
+++ b/addons/website_event/i18n/website_event.pot
@@ -363,6 +363,16 @@ msgid "Cards"
 msgstr ""
 
 #. module: website_event
+#: model_terms:ir.ui.view,arch_db:website_event.snippet_options
+msgid "Card design"
+msgstr ""
+
+#. module: website_event
+#: model_terms:ir.ui.view,arch_db:website_event.snippet_options
+msgid "Category badge"
+msgstr ""
+
+#. module: website_event
 #: model_terms:ir.ui.view,arch_db:website_event.display_timer_alert_widget
 #: model_terms:ir.ui.view,arch_db:website_event.index_topbar
 #: model_terms:ir.ui.view,arch_db:website_event.modal_ticket_registration
