[FIX] website_event: allow lower-case sidebar titles
This commit addresses a scenario where users may prefer lowercase titles
over the default uppercase ones.

task-3698364

--- a/addons/website_event/i18n/website_event.pot
+++ b/addons/website_event/i18n/website_event.pot
@@ -1202,6 +1202,11 @@ msgstr ""
 
 #. module: website_event
 #: model_terms:ir.ui.view,arch_db:website_event.event_description_full
+msgid "Share"
+msgstr ""
+
+#. module: website_event
+#: model_terms:ir.ui.view,arch_db:website_event.event_description_full
 msgid "SHARE"
 msgstr ""
 
