--- a/addons/l10n_hu_edi/i18n/l10n_hu_edi.pot
+++ b/addons/l10n_hu_edi/i18n/l10n_hu_edi.pot
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Odoo Server 16.0+e\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-11 09:44+0000\n"
-"PO-Revision-Date: 2023-10-11 09:44+0000\n"
+"POT-Creation-Date: 2024-02-19 08:52+0000\n"
+"PO-Revision-Date: 2024-02-19 08:52+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -38,6 +38,15 @@ msgid ""
 msgstr ""
 
 #. module: l10n_hu_edi
+#: model_terms:ir.ui.view,arch_db:l10n_hu_edi.view_move_form_l10n_hu_edi
+msgid ""
+"<span class=\"oe_inline o_form_label mx-3\" "
+"groups=\"base.group_multi_currency\" attrs=\"{'invisible': "
+"['|',('country_code', '!=', 'HU'),('move_type', '=', 'entry')]}\"> at "
+"</span>"
+msgstr ""
+
+#. module: l10n_hu_edi
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.product_template_form_view_l10n_hu_edi
 msgid "<span class=\"oe_inline o_form_label mx-3\"> : </span>"
 msgstr ""
@@ -55,6 +64,11 @@ msgstr ""
 #. module: l10n_hu_edi
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
 msgid "<strong>Delivery Date:</strong>"
+msgstr ""
+
+#. module: l10n_hu_edi
+#: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
+msgid "<strong>Original Invoice:</strong>"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -79,13 +93,6 @@ msgid "AAM - Personal tax exemption"
 msgstr ""
 
 #. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "AAM Personal tax exemption"
-msgstr ""
-
-#. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__product_template__l10n_hu_product_code_type__ahk
 msgid "AHK"
 msgstr ""
@@ -94,13 +101,6 @@ msgstr ""
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax__l10n_hu_tax_type__vat-atk
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-atk
 msgid "ATK - Outside the scope of VAT"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "ATK Outside the scope of VAT - VAT law 2-3.§"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -172,6 +172,13 @@ msgid "Cancelled Final Invoice"
 msgstr ""
 
 #. module: l10n_hu_edi
+#. odoo-python
+#: code:addons/l10n_hu_edi/models/ir_attachment.py:0
+#, python-format
+msgid "Cannot delete a PDF once it has been posted and not rejected by NAV"
+msgstr ""
+
+#. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__uom_uom__l10n_hu_measure_unit_code__carton
 msgid "Carton"
 msgstr ""
@@ -196,6 +203,20 @@ msgstr ""
 #. module: l10n_hu_edi
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.l10n_hu_edi_nav_aea_wiz_p1
 msgid "Close"
+msgstr ""
+
+#. module: l10n_hu_edi
+#. odoo-python
+#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
+#, python-format
+msgid "Communication error to NAV: %s"
+msgstr ""
+
+#. module: l10n_hu_edi
+#. odoo-python
+#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
+#, python-format
+msgid "Communication error to NAV: Connection timed out."
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -345,13 +366,6 @@ msgid ""
 msgstr ""
 
 #. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "EAM export of goods to a non-EU country - VAT law 98-109.§"
-msgstr ""
-
-#. module: l10n_hu_edi
 #: model:ir.model,name:l10n_hu_edi.model_account_edi_format
 msgid "EDI format"
 msgstr ""
@@ -364,13 +378,6 @@ msgstr ""
 #. module: l10n_hu_edi
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
 msgid "EU Tax ID:"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "EUE - 2.Non-reverse charge transaction, neither EUFAD37 either EUFADE"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -388,28 +395,11 @@ msgid ""
 msgstr ""
 
 #. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid ""
-"EUFAD37 - VAT law 37.§ (1) reverse charge transaction in another EU country"
-msgstr ""
-
-#. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax__l10n_hu_tax_type__vat-eufade
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-eufade
 msgid ""
 "EUFADE - Reverse charge transaction carried out in another Member State, not"
 " subject to Section 37 of the VAT Act"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid ""
-"EUFADE reverse charge transaction in another EU country not subject to VAT "
-"law 37.§ (1)"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -466,42 +456,19 @@ msgid "From"
 msgstr ""
 
 #. module: l10n_hu_edi
-#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_company__l10n_hu_vat_group_member
-#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_partner__l10n_hu_vat_group_member
-#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_users__l10n_hu_vat_group_member
-msgid "Group Member TAX Number"
+#: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
+msgid "Group Member Tax ID"
 msgstr ""
 
 #. module: l10n_hu_edi
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
-msgid "Group Member Tax ID:"
-msgstr ""
-
-#. module: l10n_hu_edi
-#: model:ir.model.fields,help:l10n_hu_edi.field_res_company__l10n_hu_vat_group_member
-#: model:ir.model.fields,help:l10n_hu_edi.field_res_partner__l10n_hu_vat_group_member
-#: model:ir.model.fields,help:l10n_hu_edi.field_res_users__l10n_hu_vat_group_member
-msgid ""
-"Group Membership VAT Number, if this company is a member of a Hungarian VAT "
-"group"
-msgstr ""
-
-#. module: l10n_hu_edi
-#: model_terms:ir.ui.view,arch_db:l10n_hu_edi.report_invoice_document
-msgid "Group Tax ID"
+msgid "Group Tax ID:"
 msgstr ""
 
 #. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax__l10n_hu_tax_type__vat-ho
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-ho
 msgid "HO - Transaction in a third country"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "HO Transaction in a third country"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -646,24 +613,9 @@ msgid "KBAET - intra-Community exempt supply, without new means of transport"
 msgstr ""
 
 #. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "KBAET intra-Community sales - VAT law 89.§"
-msgstr ""
-
-#. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax__l10n_hu_tax_type__vat-kbauk
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-kbauk
 msgid "KBAUK - tax-exempt, intra-Community sales of new means of transport"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid ""
-"KBAUK intra-Community sales of new means of transport - VAT law 89.§(2)"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -689,6 +641,13 @@ msgstr ""
 #. module: l10n_hu_edi
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__uom_uom__l10n_hu_measure_unit_code__kwh
 msgid "Kilowatt hour"
+msgstr ""
+
+#. module: l10n_hu_edi
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_account_bank_statement_line__l10n_hu_attachment_id
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_account_move__l10n_hu_attachment_id
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_account_payment__l10n_hu_attachment_id
+msgid "L10N Hu Attachment"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -758,15 +717,6 @@ msgstr ""
 
 #. module: l10n_hu_edi
 #. odoo-python
-#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
-#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
-#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
-#, python-format
-msgid "Missing NAV connection parameter."
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
 msgid "Missing VAT number for partner!"
@@ -777,13 +727,6 @@ msgstr ""
 #: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
 #, python-format
 msgid "Missing company_id parameter"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_edi_format.py:0
-#, python-format
-msgid "Missing country for partner!"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -803,13 +746,6 @@ msgstr ""
 #: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-nam
 msgid ""
 "NAM - tax-exempt on other grounds related to international transactions"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "NAM other export transaction - VAT law 110-118.§"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1031,18 +967,12 @@ msgstr ""
 #. odoo-python
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
-msgid "Please set customer address properly!"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_edi_format.py:0
-#, python-format
 msgid "Please set issuer VAT number!"
 msgstr ""
 
 #. module: l10n_hu_edi
 #. odoo-python
+#: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
 msgid "Please set issuer address properly!"
@@ -1096,6 +1026,12 @@ msgstr ""
 #. module: l10n_hu_edi
 #: model:ir.model.fields,field_description:l10n_hu_edi.field_l10n_hu_upload_transaction__version
 msgid "Protocol Version"
+msgstr ""
+
+#. module: l10n_hu_edi
+#: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax__l10n_hu_tax_type__vat-rev
+#: model:ir.model.fields.selection,name:l10n_hu_edi.selection__account_tax_template__l10n_hu_tax_type__vat-rev
+msgid "REV - Domestic Reverse Charge"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1168,10 +1104,6 @@ msgstr ""
 
 #. module: l10n_hu_edi
 #: model:ir.model.fields,field_description:l10n_hu_edi.field_l10n_hu_nav_aea_wiz__state
-msgid "State"
-msgstr ""
-
-#. module: l10n_hu_edi
 #: model:ir.model.fields,field_description:l10n_hu_edi.field_l10n_hu_nav_communication__state
 msgid "Status"
 msgstr ""
@@ -1185,10 +1117,17 @@ msgid ""
 msgstr ""
 
 #. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/account_tax.py:0
-#, python-format
-msgid "TAM Tax-exempt activity"
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_company__l10n_hu_vat_group_number
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_partner__l10n_hu_vat_group_number
+#: model:ir.model.fields,field_description:l10n_hu_edi.field_res_users__l10n_hu_vat_group_number
+msgid "TAX Group Number"
+msgstr ""
+
+#. module: l10n_hu_edi
+#: model:ir.model.fields,help:l10n_hu_edi.field_res_company__l10n_hu_vat_group_number
+#: model:ir.model.fields,help:l10n_hu_edi.field_res_partner__l10n_hu_vat_group_number
+#: model:ir.model.fields,help:l10n_hu_edi.field_res_users__l10n_hu_vat_group_number
+msgid "TAX Group Number, if this company is a member of a Hungarian TAX group"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1212,13 +1151,6 @@ msgstr ""
 #: model:ir.actions.act_window,name:l10n_hu_edi.action_l10n_hu_edi_nav_aea_wiz
 #: model_terms:ir.ui.view,arch_db:l10n_hu_edi.l10n_hu_edi_nav_aea_wiz_p1
 msgid "Tax authority audit data reporting"
-msgstr ""
-
-#. module: l10n_hu_edi
-#. odoo-python
-#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
-#, python-format
-msgid "Taxpayer validation needs a NAV Credential for the production system!"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1287,6 +1219,13 @@ msgstr ""
 #. odoo-python
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
+msgid "The customer country is missing!"
+msgstr ""
+
+#. module: l10n_hu_edi
+#. odoo-python
+#: code:addons/l10n_hu_edi/models/account_edi_format.py:0
+#, python-format
 msgid "The delivery date on the invoice is not specified!"
 msgstr ""
 
@@ -1333,8 +1272,8 @@ msgstr ""
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
 msgid ""
-"The partner is selected to be member of a TAX Group, but no Group Membership"
-" VAT Number is provided!"
+"The partner is selected to be member of a TAX Group, but no TAX Group Number"
+" is provided!"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1342,6 +1281,14 @@ msgstr ""
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
 msgid "The rounding line can only contain VAT with type ATK!"
+msgstr ""
+
+#. module: l10n_hu_edi
+#. odoo-python
+#: code:addons/l10n_hu_edi/models/l10n_hu_nav_communication.py:0
+#, python-format
+msgid ""
+"The taxpayer data query function is only available in the production system!"
 msgstr ""
 
 #. module: l10n_hu_edi
@@ -1511,8 +1458,8 @@ msgstr ""
 #: code:addons/l10n_hu_edi/models/account_edi_format.py:0
 #, python-format
 msgid ""
-"Your company is selected to be member of a TAX Group, but no Group "
-"Membership VAT Number is provided!"
+"Your company is selected to be member of a TAX Group, but no TAX Group "
+"Number is provided!"
 msgstr ""
 
 #. module: l10n_hu_edi
