--- a/addons/l10n_din5008_sale/i18n/l10n_din5008_sale.pot
+++ b/addons/l10n_din5008_sale/i18n/l10n_din5008_sale.pot
@@ -16,26 +16,31 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Customer Reference"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Expiration"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Incoterm"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Invoicing Address:"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Invoicing and Shipping Address:"
 msgstr ""
@@ -56,47 +61,56 @@ msgid "L10N Din5008 Template Data"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Order Date"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Order No."
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Pro Forma Invoice"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation Date"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation No."
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 #: model:ir.model,name:l10n_din5008_sale.model_sale_order
 msgid "Sales Order"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Salesperson"
 msgstr ""
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Shipping Address:"
 msgstr ""
