--- a/addons/l10n_din5008_sale/i18n/de.po
+++ b/addons/l10n_din5008_sale/i18n/de.po
@@ -17,26 +17,31 @@ msgstr ""
 "Plural-Forms: \n"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Customer Reference"
 msgstr "Kundenreferenz"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Expiration"
 msgstr "Ablauf"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Incoterm"
 msgstr "Lieferbedingung"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Invoicing Address:"
 msgstr "Rechnungsadresse:"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Invoicing and Shipping Address:"
 msgstr "Rechnungs- und Lieferadresse:"
@@ -57,47 +62,56 @@ msgid "L10N Din5008 Template Data"
 msgstr "L10N Din5008 Template Daten"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Order Date"
 msgstr "Bestelldatum"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Order No."
 msgstr "Auftragsnummer"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Pro Forma Invoice"
 msgstr "Proformarechnung"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation"
 msgstr "Angebot"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation Date"
 msgstr "Angebotsdatum"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Quotation No."
 msgstr "Angebotsnummer"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 #: model:ir.model,name:l10n_din5008_sale.model_sale_order
 msgid "Sales Order"
 msgstr "Auftragsbestätigung"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Salesperson"
 msgstr "Verkäufer"
 
 #. module: l10n_din5008_sale
+#. odoo-python
 #: code:addons/l10n_din5008_sale/models/sale.py:0
 msgid "Shipping Address:"
 msgstr "Lieferadresse:"
