--- a/addons/l10n_fr_fec/i18n/l10n_fr_fec.pot
+++ b/addons/l10n_fr_fec/i18n/l10n_fr_fec.pot
@@ -4,10 +4,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Odoo Server 14.0\n"
+"Project-Id-Version: Odoo Server saas~17.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-27 14:43+0000\n"
-"PO-Revision-Date: 2021-10-27 14:43+0000\n"
+"POT-Creation-Date: 2024-02-23 13:49+0000\n"
+"PO-Revision-Date: 2024-02-23 13:49+0000\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
@@ -146,6 +146,11 @@ msgid "End Date"
 msgstr ""
 
 #. module: l10n_fr_fec
+#: model:ir.model.fields,field_description:l10n_fr_fec.field_account_fr_fec__excluded_journal_ids
+msgid "Excluded Journals"
+msgstr ""
+
+#. module: l10n_fr_fec
 #: model:ir.model.fields,field_description:l10n_fr_fec.field_account_fr_fec__export_type
 msgid "Export Type"
 msgstr ""
@@ -192,11 +197,6 @@ msgid "Idevise"
 msgstr ""
 
 #. module: l10n_fr_fec
-#: code:addons/l10n_fr_fec/wizard/account_fr_fec.py:0
-msgid "Invalid VAT number for company %s"
-msgstr ""
-
-#. module: l10n_fr_fec
 #: model_terms:ir.ui.view,arch_db:l10n_fr_fec.account_fr_fec_view
 msgid "JournalCode"
 msgstr ""
@@ -207,11 +207,6 @@ msgid "JournalLib"
 msgstr ""
 
 #. module: l10n_fr_fec
-#: model:ir.model.fields,field_description:l10n_fr_fec.field_account_fr_fec____last_update
-msgid "Last Modified on"
-msgstr ""
-
-#. module: l10n_fr_fec
 #: model:ir.model.fields,field_description:l10n_fr_fec.field_account_fr_fec__write_uid
 msgid "Last Updated by"
 msgstr ""
@@ -219,11 +214,6 @@ msgstr ""
 #. module: l10n_fr_fec
 #: model:ir.model.fields,field_description:l10n_fr_fec.field_account_fr_fec__write_date
 msgid "Last Updated on"
-msgstr ""
-
-#. module: l10n_fr_fec
-#: code:addons/l10n_fr_fec/wizard/account_fr_fec.py:0
-msgid "Missing VAT number for company %s"
 msgstr ""
 
 #. module: l10n_fr_fec
@@ -284,6 +274,7 @@ msgid ""
 msgstr ""
 
 #. module: l10n_fr_fec
+#. odoo-python
 #: code:addons/l10n_fr_fec/wizard/account_fr_fec.py:0
 msgid "The start date must be inferior to the end date."
 msgstr ""
@@ -312,6 +303,7 @@ msgid ""
 msgstr ""
 
 #. module: l10n_fr_fec
+#. odoo-python
 #: code:addons/l10n_fr_fec/wizard/account_fr_fec.py:0
 msgid "You could not set the start date or the end date in the future."
 msgstr ""
