[FIX] base: Update zh_CN.po translation error

--- a/odoo/addons/base/i18n/zh_CN.po
+++ b/odoo/addons/base/i18n/zh_CN.po
@@ -19489,7 +19489,7 @@ msgstr "导出设置"
 #: model:ir.actions.act_window,name:base.action_wizard_lang_export
 #: model:ir.ui.menu,name:base.menu_wizard_lang_export
 msgid "Export Translation"
-msgstr "Export Translation"
+msgstr "导出翻译"
 
 #. module: base
 #: model_terms:ir.ui.view,arch_db:base.wizard_lang_export
@@ -32215,7 +32215,7 @@ msgstr "塞拉利昂"
 #: model:ir.module.category,name:base.module_category_sales_sign
 #: model:ir.module.module,shortdesc:base.module_sign
 msgid "Sign"
-msgstr "标志"
+msgstr "签署"
 
 #. module: base
 #: model:ir.module.module,summary:base.module_hr_contract_salary
