--- a/addons/web/i18n/it.po
+++ b/addons/web/i18n/it.po
@@ -935,6 +935,15 @@ msgstr "Aggiungi contesto direttive qweb"
 
 #. module: web
 #. odoo-javascript
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#, python-format
+msgid "Add to Favorites"
+msgstr "Aggiungi ai Preferiti"
+
+#. module: web
+#. odoo-javascript
 #: code:addons/web/static/src/views/fields/datetime/datetime_field.xml:0
 msgid "Add start date"
 msgstr "Aggiungi data di inizio"
@@ -5410,6 +5419,15 @@ msgstr "Rimuovi copertina"
 #: code:addons/web/static/src/views/fields/properties/property_definition_selection.xml:0
 msgid "Remove Property"
 msgstr "Elimina proprietà"
+
+#. module: web
+#. odoo-javascript
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#: code:addons/web/static/src/views/fields/boolean_favorite/boolean_favorite_field.xml:0
+#, python-format
+msgid "Remove from Favorites"
+msgstr "Rimuovi dai Preferiti"
 
 #. module: web
 #. odoo-javascript
