[FIX] account: fix traceback when the user doesn't give from or to value
This traceback occurs when the user tries to update a fiscal position record
by giving either from or to value to zip range.

To reproduce this issue:-

1) Install "Accounting"
2) Create a new fiscal position from "Accounting/Configuration" without
  "Detect Automatically"
3) Now update the record by enabling "Detect Automatically"
4) Select any country and give only the "from" value for "Zip Range"
5) Save the record

Error:- "TypeError: object of type 'bool' has no len()"

When the user updated the "fiscal position" with only "from or to"
It triggers "_convert_zip_values" method only value.
This leads to traceback, as max() is used between from and to.

After applying this commit will resolve this issue by making the code
more robust with an additional check.

sentry-5284424770

closes odoo/odoo#169007

X-original-commit: 09ada135847b96fa58d862568603dde61fcf1488
Signed-off-by: Laurent Smet (las) <las@odoo.com>

--- a/addons/account/i18n/account.pot
+++ b/addons/account/i18n/account.pot
@@ -7476,7 +7476,9 @@ msgstr ""
 #. module: account
 #. odoo-python
 #: code:addons/account/models/partner.py:0
-msgid "Invalid \"Zip Range\", please configure it properly."
+msgid ""
+"Invalid \"Zip Range\", You have to configure both \"From\" and \"To\" values"
+" for the zip range and \"To\" should be greater than \"From\"."
 msgstr ""
 
 #. module: account
